js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-if-no-new-call-expression-prop-access.js







































$DONOTEVALUATE();

if (true) {
  new import('').prop;
}
